Fix layout issues in category and post page

--- a/styles/_scss/_sidenav.scss
+++ b/styles/_scss/_sidenav.scss
@@ -7,7 +7,7 @@
 	}
 }
 
-@media (max-width: 768px) { 
+@media (max-width: 767px) { 
 	// disabled offset-sm-5 
 	.container--main {
         margin-left: 0;
